# boilerplate

./: CLEANUP_CHECKLIST.md  README.md  docker-compose..yaml  pyproject.toml
apps/user/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/user/migrations/: 0001_initial.py
core/: urls.py
core/auth/: backend.py  serializers.py  validators.py  views.py
core/base/: base_models.py  base_views.py
core/settings/: base.py
core/templates/email/: TODO_REMOVE_PROJECT_SPECIFIC_TEMPLATES.md  notify_applicant_result_failed.txt  notify_applicant_result_passed.txt  registration_confirmation_ppdb.txt  user_reset_password.html  user_reset_password.txt
core/templates/scalar/: scalar.html
core/urls/: __init__.py  redirection.py  v1.py
utils/api/: exception_handler.py  exceptions.py  generics.py  schema.py
utils/cache/: cache_manager.py
utils/middleware/: cut_off_middleware.py  message_middleware.py  schema_middleware.py  storages_middleware.py
